test/neg/neg-as_rpc1.errc
Arrays may not be passed as arguments to as_rpc
